yorch.dev-v2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: v2-service
  labels:
    app: v2
  namespace: yorch
spec:
  selector:
    app: v2
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 80
